[package]
name = "quorum_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.7"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.6"
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
